# python_advanced_202312

./: .gitignore  day1.ipynb  queens.py  square.py  str_iterable.mdj
01-FunctionIterable/: day1.ipynb  magicsquare.py  pytest.ini
01-FunctionIterable/tests/: test_is_magic.py
02-slices/: day2-slices.ipynb
03-OOP/: Readme.md  app.py  app_script.py  day2-oop.ipynb
03-OOP/classic/: city.py
03-OOP/tests/classic/: conftest.py  test_city_equals.py  test_city_order.py
04-typing/: Readme.md  main.py  ndarray.ipynb
05-OOP-dataclass/: appgeo.py  city.py  classstaticmethod.ipynb  geometry.py  play_with_abc.py  test_city.py
06-Decorators/: decorators.ipynb
08-Concurrent/: app_executor.py
09-Packaging/cityproject/: LICENSE.txt  Readme.md  pyproject.toml
09-Packaging/cityproject/city.egg-info/: PKG-INFO  SOURCES.txt
09-Packaging/cityproject/tests/: citycompute.py  test_city.py
