[project]
name = "city"
version = "1.1"
description = "Library with a City class"
requires-python = ">=3.10"
keywords = ["city", "zipcode", "population"]
authors = [
    {name = "Mat C.", email = "mat.c@example.org"},
    {name = "M. Col", email = "m.col@example.org"},
]
maintainers = [
    {name = "Mat C.", email = "mat.c@example.org"},
]
readme = "Readme.md"
license = { file = "LICENSE.txt" }


[project.optional-dependencies]
test = [
  "pytest"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"